# ttbar-unfolding

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  setup.sh
.github/workflows/: cmake.yml
FlowModel/: CMakeLists.txt  env.yaml  planar_dummy.ipynb  realnvp_hist.ipynb  realnvp_reco.ipynb  realnvp_train_decoder.ipynb  realnvp_train_encoder.ipynb  realnvp_truth.ipynb  realnvp_validate.ipynb
FlowModel/src/norm_flow/: planar.py  realnvp.py  utils.py
doc/: Details.md
ttbar_MadTree/: CMakeLists.txt
ttbar_MadTree/include/: Config.hpp  DelphesTree.hpp  Event.hpp  HistogramKeeper.hpp  RecoTree.hpp  ResponseKeeper.hpp  TreeWriter.hpp
ttbar_MadTree/src/: DelphesTree.cpp  Event.cpp  HistogramKeeper.cpp  RecoTree.cpp  ResponseKeeper.cpp  TreeWriter.cpp
ttbar_MadTree/utils/: main.cpp
ttbar_Unfold/: CMakeLists.txt
ttbar_Unfold/include/: HistDraw.hpp  SimilarityTest.hpp  UnfoldFactory.hpp
ttbar_Unfold/src/: HistDraw.cpp  SimilarityTest.cpp  UnfoldFactory.cpp
ttbar_Unfold/utils/: main.cpp  main_nf.cpp  tutorial.cpp
